--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,6 +13,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
 }
 .new_margin_top {
   margin-top: 1rem;
@@ -55,7 +59,7 @@
   }
 }
 
-/* //TYPE 2 BUTTON */
+
 .type_2_button {
   font-family: PlusJakartaSans, -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Oxygen, Cantarell, Helvetica Neue, Ubuntu, sans-serif;
